--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "generate": "dotenv -e .env -- prisma generate"
   },
   "dependencies": {
+    "@google/genai": "^1.30.0",
     "@prisma/client": "^7.0.0",
     "next": "16.0.3",
     "react": "19.2.0",
