--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,171 @@
-# General
+##############
+#   GENERAL  #
+##############
+
 .DS_Store
 .idea/
 .vscode/
 *.log
+*.tmp
+*.swp
 
-# Python
+
+##############
+#   PYTHON   #
+##############
+
 __pycache__/
 *.py[cod]
 *$py.class
+
+# Virtual envs
 .venv/
 venv/
 env/
+ENV/
 .env
+.env.*
 
+
+# Python packaging
 *.egg-info/
 dist/
 build/
+pip-wheel-metadata/
+*.egg
+*.whl
 
-# Node (just in case)
+
+##############
+#   MODELS   #
+##############
+
+# Do NOT commit large ML model weights
+ml/app/models/
+*/models/
+*.pt
+*.bin
+*.ckpt
+*.safetensors
+
+
+##############
+#    NODE    #
+##############
+
 node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Next.js
+.next/
+out/
+.next/
+.vercel/
+
+# React build
+build/
+coverage/
+
+
+##############
+#   PRISMA   #
+##############
+
+prisma/migrations/
+*.db-journal
+*.sqlite
+dev.db
+test.db
+
+
+##############
+#   DOCKER   #
+##############
+
+# Docker build junk
+docker-compose.override.yml
+*.pid
+*.pid.lock
+
+# Ignore docker volumes
+docker-volume/
+docker-data/
+
+
+##############
+#   SECRETS  #
+##############
+
+# Do NOT commit secrets EVER
+.env
+.env.local
+.env.development
+.env.production
+.env.test
+
+
+##############
+#   OS SPEC  #
+##############
+
+# macOS
+.DS_Store
+.AppleDouble
+.LSOverride
+Icon?
+._*
+
+# Windows
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+
+# Linux
+*~
+*.bak
+
+
+##############
+#   EDITORS  #
+##############
+
+# VS Code
+.vscode/
+.history/
+*.code-workspace
+
+# JetBrains
+.idea/
+*.iml
+*.ipr
+*.iws
+
+
+##############
+#  MISC APP  #
+##############
+
+# Logs
+logs/
+*.log
+log/
+error.log
+npm-debug.log*
+
+# Temp & cache
+tmp/
+temp/
+.cache/
+.cache-loader/
+
+
+##############
+#   TESTS    #
+##############
+
+ml/tests/sample_audio/
+pytest_cache/
+.coverage
+htmlcov/
