--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
           cache: "npm"
 
       - name: Install deps (clean)
-        run: npm ci
+        run: npm install
 
       - name: Lint
         run: npm run lint
