--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,21 +11,20 @@ jobs:
 
     defaults:
       run:
-        working-directory: frontend 
+        working-directory: frontend
 
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
-        with:
-          path: .
 
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: "20"
           cache: "npm"
+          cache-dependency-path: "frontend/package-lock.json"
 
-      - name: Install deps (clean)
+      - name: Install deps
         run: npm install
 
       - name: Lint
@@ -33,5 +32,3 @@ jobs:
 
       - name: Build Next.js
         run: npm run build
-
-
