--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^17.2.3",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.554.0",
+    "maplibre-gl": "^5.13.0",
     "next": "16.0.3",
     "pg": "^8.16.3",
     "react": "19.2.0",
