--- a/ml/requirements.txt
+++ b/ml/requirements.txt
@@ -1,6 +1,8 @@
 # API
 fastapi
 uvicorn[standard]
+python-dotenv
+
 
 # Audio Processing
 librosa
@@ -22,6 +24,9 @@ huggingface-hub
 
 # Networking
 requests
+
+# Database
+psycopg2-binary
 
 # Testing
 pytest
