--- a/ml_v2/orchastrater/pyproject.toml
+++ b/ml_v2/orchastrater/pyproject.toml
@@ -11,5 +11,6 @@ dependencies = [
     "psycopg2-binary>=2.9.11",
     "pydantic>=2.12.5",
     "requests>=2.32.5",
+    "scikit-learn>=1.8.0",
     "uvicorn>=0.40.0",
 ]
