--- a/ml_v2/orchastrater/pyproject.toml
+++ b/ml_v2/orchastrater/pyproject.toml
@@ -10,7 +10,10 @@ dependencies = [
     "numpy>=2.4.1",
     "psycopg2-binary>=2.9.11",
     "pydantic>=2.12.5",
+    "python-dotenv>=1.2.1",
+    "python-multipart>=0.0.21",
     "requests>=2.32.5",
     "scikit-learn>=1.8.0",
+    "supabase>=2.27.2",
     "uvicorn>=0.40.0",
 ]
