--- a/ml_v2/orchastrater/pyproject.toml
+++ b/ml_v2/orchastrater/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.11"
 dependencies = [
     "fastapi>=0.128.0",
     "faster-whisper>=1.2.1",
+    "httpx>=0.28.1",
     "numpy>=2.4.1",
     "psycopg2-binary>=2.9.11",
     "pydantic>=2.12.5",
